<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Routes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_stop">Start/Stopp</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="go">Go</string>
    <string name="drive">Drive</string>
    <string name="chooseActivity">Choose activity:</string>
    <string name="startActivity">Start Activity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_list">List</string>
    <string name="list">List</string>

</resources>
